quité padding al hero

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 
           <div class="col-12 col-md-4 offset-1 mb-4 px-5">
             <h2>Expertos en texturas reales</h2>
-            <p class="fw-medium">Creamos rutinas y servicios pensados para que tu textura se vea definida, ligera y con un movimiento real
+            <p class="fw-medium">Creamos rutinas y servicios pensados para que tu textura se vea definida, ligera y con
+              un movimiento real
               y saludable.</p>
           </div>
 
@@ -221,7 +222,8 @@
                 <img src="img/testi1.png" class="img-fluid">
               </div>
               <div class="col-8 col-md-6 text-start">
-                <p class="fw-medium">Me encantó la atención. Entendieron mi tipo de rizo y por primera vez sentí que mi cabello quedó
+                <p class="fw-medium">Me encantó la atención. Entendieron mi tipo de rizo y por primera vez sentí que mi
+                  cabello quedó
                   justo como yo quería.</p>
                 <p class="fw-medium"><small>Melissa Torres</small></p>
               </div>
@@ -235,7 +237,8 @@
                 <img src="img/testi2.png" class="img-fluid">
               </div>
               <div class="col-8 col-md-6 text-start">
-                <p class="fw-medium">El corte quedó increíble. Me explicaron cada paso y usaron productos que realmente funcionaron para
+                <p class="fw-medium">El corte quedó increíble. Me explicaron cada paso y usaron productos que realmente
+                  funcionaron para
                   mis rizos.</p>
                 <p class="fw-medium"><small>Ana Reyes</small></p>
               </div>
@@ -252,7 +255,8 @@
         <div class="row mt-5 align-items-center">
           <div class="col-12 col-md-4 offset-2 mb-5">
             <h4 class="fw-semibold">Nuestras Certificaciones</h4>
-            <p class="fw-medium">En La Casa Curly, garantizamos calidad y profesionalismo con certificaciones reconocidas dentro de la
+            <p class="fw-medium">En La Casa Curly, garantizamos calidad y profesionalismo con certificaciones
+              reconocidas dentro de la
               industria</p>
           </div>
 
@@ -339,11 +343,7 @@
 
   <!--PIE DE PÁGINA-->
   <footer>
-    <section id="footer" class="py-5" style="background-image:url('img/fondo footer.png');
-background-size: cover;
-background-position: center;
-min-height: 450px;">
-
+    <section id="footer" class="py-5" style="background-image:url('img/fondo footer.png'); background-size: cover; background-position: center;min-height: 450px;">
 
       <div class="container py-5">
         <div class="row">
