arreglé el navbar

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 <body style="font-family: 'Quicksand', sans-serif;">
 
   <!-- NAVBAR -->
-  <section id="navbar">
-    <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg fixed-top bg-white">
       <div class="container">
 
         <!-- Logo -->
@@ -70,7 +69,6 @@
 
       </div>
     </nav>
-  </section>
 
   <main>
 
@@ -354,13 +352,13 @@
 
           </div>
           <div class="col-12 col-md-6 col-xl-3">
-            <h5 style="color: white;">Encuéntranos</h5>
+            <h5 style="color: white;">Encuéntranos:</h5>
             <p class="pt-4" style="color: white;">Stand G4 Primer Piso CC Boulevard Trujillo</p>
             <p style="color: white;">954 185 656</p>
           </div>
           <div class="col-12 col-md-6 col-xl-3">
             <h5 style="color: white;">Horario de atención:</h5>
-            <p class="pt-4" style="color: white;">Lunes a Sábado: 9:00 am-8:00 pm
+            <p class="pt-4" style="color: white;">Lunes a Sábado: 9:00 am-8:00 pm <br>
               Domingos: 10:00 am-6:00 pm</p>
           </div>
           <div class="col-12 col-md-6 col-xl-3">
