--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- Logo -->
         <a class="navbar-brand" href="#">
-          <img src="img/logo.png" alt="">
+          <img class="img-fluid" src="img/logo.png" alt="">
         </a>
 
         <!-- Botón móvil -->
