--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
   background-size: cover; background-position: center; background-repeat: no-repeat;
   min-height: 100vh;">
 
-      <div class="container">
+      <div class="container pt-5">
         <div class="row">
           <div class="col-12 col-md-5">
             <h1 class="display-1 fw-bold" style="color: #8D0B29;">Deja que tu cabello brille</h1>
-            <h5 class="fw-medium mb-3" style="color: #8D0B29;">Redescubre la forma natural de tus
+            <h5 class="fw-medium mb-3 pt-4" style="color: #8D0B29;">Redescubre la forma natural de tus
               rizos con un cuidado hecho a la medida.</h5>
 
             <a class="btn px-4 py-2 rounded-5" href="#servicios"
@@ -308,7 +308,6 @@
                   <label for="mensaje" class="form-label">Mensaje</label>
                   <textarea class="form-control rounded-4" id="mensaje" rows="4"></textarea>
                 </div>
-
 
                 <div class="col-12">
                   <div class="form-check">
