--- a/index.html
+++ b/index.html
@@ -73,10 +73,55 @@
   <main>
 
     <!-- HERO -->
-    <section id="hero" class="d-flex align-items-center" style="
-  background-image: url('img/hero.png');
-  background-size: cover; background-position: center; background-repeat: no-repeat;
-  min-height: 100vh;">
+    <section class="d-none d-lg-flex align-items-center"
+  style="background-image:url('img/hero.png'); min-height:100vh; background-size:cover; background-position:center;">
+  <div class="container text-start">
+
+      <div class="container pt-5">
+        <div class="row">
+          <div class="col-12 col-md-5">
+            <h1 class="display-1 fw-bold" style="color: #8D0B29;">Deja que tu cabello brille</h1>
+            <h5 class="fw-medium mb-3 pt-4" style="color: #8D0B29;">Redescubre la forma natural de tus
+              rizos con un cuidado hecho a la medida.</h5>
+
+            <a class="btn px-4 py-2 rounded-5" href="#servicios"
+              style="background:#C7103A; color:white; transition:.3s;" onmouseover="this.style.background='#A00D31'"
+              onmouseout="this.style.background='#C7103A'">
+              Ver nuestros servicios
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </section>
+    
+    <!-- HERO tablet -->
+    <section class="d-none d-md-flex d-lg-none"
+  style="background-image:url('img/hero\ tablet.png'); min-height:100vh; background-size:cover; background-position:center;">
+  <div class="container">
+
+      <div class="container pt-5 mt-5">
+        <div class="row">
+          <div class="col-12 col">
+            <h1 class="display-1 fw-bold" style="color: #8D0B29;">Deja que tu cabello brille</h1>
+            <h5 class="fw-medium mb-3 pt-3 pe-5 me-5" style="color: #8D0B29;">Redescubre la forma natural de tus
+              rizos con un cuidado hecho a la medida.</h5>
+
+            <a class="btn px-4 py-2 rounded-5" href="#servicios"
+              style="background:#C7103A; color:white; transition:.3s;" onmouseover="this.style.background='#A00D31'"
+              onmouseout="this.style.background='#C7103A'">
+              Ver nuestros servicios
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <!-- HERO mobile -->
+    <section id="hero-mobile" class="d-flex d-md-none py-5 mt-5"
+  style="background-image:url('img/hero\ mobile.png'); min-height:100vh; background-size:cover; background-position:center;">
+  <div class="container">
 
       <div class="container pt-5">
         <div class="row">
@@ -103,7 +148,7 @@
         <div class="row mt-5 py-5 align-items-center">
 
           <div class="col-12 col-md-5 offset-md-1">
-            <img src="img/nosotros1.png" class="img-fluid" alt="chica rizada">
+            <img src="img/nosotros1.png" class="img-fluid mb-3 md" alt="chica rizada">
           </div>
 
 
@@ -125,7 +170,7 @@
       <div class="container">
         <div class="row mt-5 py-2">
 
-          <div class="col-12 col-md-4 offset-1 mb-4 px-5">
+          <div class="col-12 col-md-4 offset-md-1 mb-4 px-5">
             <h2>Expertos en texturas reales</h2>
             <p class="fw-medium">Creamos rutinas y servicios pensados para que tu textura se vea definida, ligera y con
               un movimiento real
@@ -251,7 +296,7 @@
     <section id="certificaiones">
       <div class="container">
         <div class="row mt-5 align-items-center">
-          <div class="col-12 col-md-4 offset-2 mb-5">
+          <div class="col-12 col-md-4 offset-md-2 mb-5">
             <h4 class="fw-semibold">Nuestras Certificaciones</h4>
             <p class="fw-medium">En La Casa Curly, garantizamos calidad y profesionalismo con certificaciones
               reconocidas dentro de la
