pequeños ajustes responsive

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     <!--CERTIFICIACIONES-->
     <section id="certificaiones">
       <div class="container">
-        <div class="row mt-5 align-items-center">
+        <div class="row mt-md-5 align-items-center">
           <div class="col-12 col-md-4 offset-md-2 mb-5">
             <h4 class="fw-semibold">Nuestras Certificaciones</h4>
             <p class="fw-medium">En La Casa Curly, garantizamos calidad y profesionalismo con certificaciones
