--- a/index.html
+++ b/index.html
@@ -296,15 +296,15 @@
     <section id="certificaiones">
       <div class="container">
         <div class="row mt-md-5 align-items-center">
-          <div class="col-12 col-md-4 offset-md-2 mb-5">
+          <div class="col-12 col-md-4 offset-md-2">
             <h4 class="fw-semibold">Nuestras Certificaciones</h4>
-            <p class="fw-medium">En La Casa Curly, garantizamos calidad y profesionalismo con certificaciones
+            <p class="fw-medium me-md-5">En La Casa Curly, garantizamos calidad y profesionalismo con certificaciones
               reconocidas dentro de la
-              industria</p>
+              industria.</p>
           </div>
 
           <div class="col-12 col-md-6">
-            <img src="img/certific.png" class="img-fluid mb-5 pb-4">
+            <img src="img/certific.png" class="img-fluid my-5 pb-md-4">
           </div>
         </div>
       </div>
