--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <!-- HERO mobile -->
     <section id="hero-mobile" class="d-flex d-md-none py-5 mt-5"
-  style="background-image:url('img/hero\ mobile.png'); min-height:100vh; background-size:cover; background-position:center;">
+  style="background-image:url('img/hero\ mobile\ 2.0.png'); min-height:100vh; background-size:cover; background-position:center;">
   <div class="container">
 
       <div class="container pt-5">
