--- a/index.html
+++ b/index.html
@@ -148,17 +148,17 @@
         <div class="row mt-5 py-5 align-items-center">
 
           <div class="col-12 col-md-5 offset-md-1">
-            <img src="img/nosotros1.png" class="img-fluid mb-3 md" alt="chica rizada">
+            <img src="img/nosotros1.png" class="img-fluid mb-4 md" alt="chica rizada">
           </div>
 
 
-          <div class="col-12 col-md-5 offset-md-1">
+          <div class="col-12 col-md-5 offset-md-1 text-center text-md-start">
             <h1 class="fw-semibold">Donde tus rizos se sienten en casa</h1>
             <p>Somos un espacio dedicado a realzar la belleza natural del cabello ondulado, rizado y afro, con
               atención
               cercana y resultados hechos exclusivamente para ti.
             </p>
-            <button type="button" class="btn btn-outline-danger rounded-5">Conócenos</button>
+            <button type="button" class="btn btn-outline-danger mx-auto d-block d-md-inline-block rounded-5">Conócenos</button>
           </div>
 
         </div>
@@ -170,7 +170,7 @@
       <div class="container">
         <div class="row mt-5 py-2">
 
-          <div class="col-12 col-md-4 offset-md-1 mb-4 px-5">
+          <div class="col-12 col-md-4 offset-md-1 mb-4 px-5 text-center text-md-start">
             <h2>Expertos en texturas reales</h2>
             <p class="fw-medium">Creamos rutinas y servicios pensados para que tu textura se vea definida, ligera y con
               un movimiento real
@@ -253,7 +253,7 @@
     <!--TESTIMONIOS-->
     <section id="testimonios">
       <div class="container">
-        <div class="row mt-5 py-5 text-center">
+        <div class="row mt-md-5 py-5 text-center">
           <div class="col-12 mb-4 py pb-3">
             <h3 class="fw-semibold">Testimonios</h3>
           </div>
@@ -296,7 +296,7 @@
     <section id="certificaiones">
       <div class="container">
         <div class="row mt-md-5 align-items-center">
-          <div class="col-12 col-md-4 offset-md-2">
+          <div class="col-12 col-md-4 offset-md-2 text-center text-md-start">
             <h4 class="fw-semibold">Nuestras Certificaciones</h4>
             <p class="fw-medium me-md-5">En La Casa Curly, garantizamos calidad y profesionalismo con certificaciones
               reconocidas dentro de la
@@ -328,7 +328,7 @@
               <form class="row g-3">
                 <div class="col-md-6">
                   <label for="inputEmail4" class="form-label">Nombres</label>
-                  <input type="text" class="form-control rounded-5" id="Nombres">
+                  <input type="text" class="form-control rounded-5"  id="Nombres">
                 </div>
                 <div class="col-md-6">
                   <label for="inputPassword4" class="form-label">Apellidos</label>
@@ -353,16 +353,8 @@
                   <label for="mensaje" class="form-label">Mensaje</label>
                   <textarea class="form-control rounded-4" id="mensaje" rows="4"></textarea>
                 </div>
-
-                <div class="col-12">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
-                      Estoy de acuerdo
-                    </label>
-                  </div>
-                </div>
-                <div class="col-12">
+                
+                <div class="col-12 mt-4">
                   <a class="btn px-4 py-2 rounded-5" style="background:#C7103A; color:white; transition:.3s;"
                     onmouseover="this.style.background='#A00D31'" onmouseout="this.style.background='#C7103A'">
                     Enviar</a>
